# 2-owen-community-be

./: .env.example  .gitignore  README.md  config.py  cookies.txt  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/models/: user.py
app/routes/: post_examples.py  response_examples.py  user_routes.py
controllers/: auth_controller.py  comment_controller.py  post_controller.py  user_controller.py
db/: apply_optimizations.py  generate_dummy_data.py  index_optimizations.sql  perf_analysis.sql  schema.sql  seed.sql
db/migrations/: 001_add_post_images_table.sql
docs/: JSONRESPONSE_GUIDE.md  POSTMAN_GUIDE.md  POST_REQUEST_GUIDE.md  README.md
models/: __init__.py  board_model.py  comment_model.py  post_model.py  user_model.py
postman_collections/: Owen_Community_API.postman_collection.json  Owen_Community_API_Full.postman_collection.json
routers/: __init__.py  auth_router.py  comment_router.py  post_router.py  test_router.py  user_router.py
schemas/: __init__.py  auth_schema.py  base_schema.py  comment_schema.py  error_schema.py  post_schema.py  user_schema.py
test/: conftest.py  test_api.py  test_results.json
test/runtime_checks/: api_integration_check.py  db_connection_check.py  session_db_check.py
utils/: auth_middleware.py  error_codes.py  exceptions.py  file_utils.py  request_id_middleware.py  response.py  test_utils.py
utils/common/: file_utils.py  id_utils.py  response.py
utils/database/: db.py
utils/errors/: error_codes.py  exception_handlers.py  exceptions.py
utils/middleware/: access_log_middleware.py  auth_middleware.py  db_session_middleware.py
utils/test/: test_utils.py
